--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "wavesurfer.js": "^7.12.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -24,6 +25,6 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^5.0.0"
+    "vite": "^5.2.8"
   }
 }
